--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>4.1.0</version>
     <packaging>war</packaging>
 
-    <name>j.LP</name>
+    <name>i.LP</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
